--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,16 @@
 .App {
   text-align: center;
+  background-image: url('../public/background.png');
+  background-size: cover;
+  background-position: center center;
 }
 
 .App-logo {
-  height: 40vmin;
+  width: 100vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,13 +22,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
