--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,8 @@
   text-align: center;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 5px;
-  width: 80%;
+  width: 90%;
+  max-width: 500px;
   padding: 10px;
   font-family: 'Zen Antique Soft', serif;
 }
@@ -33,10 +34,12 @@
   background-color: rgba(255, 255, 255, 0.5);
   font-weight: bolder;
   text-shadow: 1px 1px 5px rgb(255, 255, 255);
-  font-size: large;
+  font-size: 1em;
   /* border-radius: 20px; */
   padding: 0px 3px;
+  text-align: center;
   width: 100%;
+  min-width: 500px;
   box-shadow: 0 0 5px rgba(255, 255, 255, 1.0);
 }
 
