--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 .App-intro{
   color: rgb(255, 255, 255);
-  font-size: 0.8em;
+  font-size: 1.4vh;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
   margin: 0 0 1em 0;
   text-align: center;
@@ -34,18 +34,16 @@
   background-color: rgba(255, 255, 255, 0.5);
   font-weight: bolder;
   text-shadow: 1px 1px 5px rgb(255, 255, 255);
-  font-size: 1em;
+  font-size: 1.6vh;
   /* border-radius: 20px; */
   padding: 0px 3px;
   text-align: center;
-  width: 100%;
-  min-width: 500px;
   box-shadow: 0 0 5px rgba(255, 255, 255, 1.0);
 }
 
 .App-header {
   /* min-height: 100vh; */
-  padding: 50px;
+  padding-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
